public/stylesheets/main.css
html{
    height:100%;
    width:100%
}

body{
    /* background-image: url("https://images.unsplash.com/photo-1591563678622-4d4bc47f99d0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
    background-attachment: fixed;
    background-size: cover; */
    font-family: 'Quicksand', sans-serif;
    background-color:#3D9970;
}

.bg-light-olive{
    background-color:#c4e0d4;
}

.bg-olive{
    background-color:#3D9970;
}

.long-text-box{
    height:300px!important;
}

.container{
    background: #fff;
}

.ingredients-list{
    list-style: none;
    padding:0;
}

.ingredients-list li{
    padding:0.25rem 0.5rem;
}

.ingredients-list li:nth-of-type(odd){
    background-color: #f9f9f9;
}

.ingredients-list li:nth-of-type(even){
    background-color: #c5e6dd;
}

.brick{
    height:0.75rem;
    width:3rem;
    margin:1rem auto;
}

.p-10{
    padding:4rem 6rem;
}

